--- a/src/components/AddUserForm/AddUserForm.css
+++ b/src/components/AddUserForm/AddUserForm.css
@@ -1,8 +1,14 @@
 .add-user-form-container{
-    max-width: 700px;
-    margin: 3rem auto;
+    width: 700px;
+    margin: 2rem auto;
 } 
 
 .add-user-form-container .ant-picker{
     width: 100%;
+}
+
+@media (max-width:800px){
+    .add-user-form-container{
+        width: 80%;
+    }
 }
